{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 102,
  "lineage": "c598e13c-4f46-5d9f-a95d-647abada75e7",
  "resources": [
    {
      "module": "module.stack_1",
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:security-group/sg-041dee03c1c84161b",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-041dee03c1c84161b",
            "name": "cml-security-group",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "OwnerName": "",
              "ResourceOwner": "",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.stack_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017c001a88dd93847",
            "arn": "arn:aws:ec2:us-west-1:383452002839:instance/i-029130f2b61e9dd6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a25511ae4701f752",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile-s",
            "id": "i-029130f2b61e9dd6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-cml",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af1725f6bc207983",
            "private_dns": "ip-10-0-20-71.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.71",
            "public_ip": "18.144.35.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a25511ae4701f752",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0485fbbbb32461ece",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041dee03c1c84161b"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.test_profile",
            "module.iam.aws_iam_policy_attachment.instance_profile_policyattachment",
            "module.iam.aws_iam_role.ssm-role",
            "module.iam.data.aws_iam_policy.instance_profile_policy",
            "module.stack_1.aws_key_pair.ssh",
            "module.stack_1.data.aws_iam_instance_profile.instance_profile",
            "module.stack_1.data.aws_security_group.selected",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.rtbl",
            "module.vpc.aws_route_table_association.public-subnet-1-route-table-association",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.private-sub1",
            "module.vpc.aws_subnet.private-sub2",
            "module.vpc.aws_subnet.pub-sub1",
            "module.vpc.aws_subnet.pub-sub2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f445b96bf3202be9",
            "domain": "vpc",
            "id": "eipalloc-0f445b96bf3202be9",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-219-2-81.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.2.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cml_eip-0"
            },
            "tags_all": {
              "Name": "cml_eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b8a9d2d4c4cad4f",
            "domain": "vpc",
            "id": "eipalloc-06b8a9d2d4c4cad4f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-204-236-149-138.us-west-1.compute.amazonaws.com",
            "public_ip": "204.236.149.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cml_eip-1"
            },
            "tags_all": {
              "Name": "cml_eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06947284c6209babe",
            "domain": "vpc",
            "id": "eipalloc-06947284c6209babe",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-176-39-55.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.39.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cml_eip-2"
            },
            "tags_all": {
              "Name": "cml_eip-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09337766a67fe24af",
            "domain": "vpc",
            "id": "eipalloc-09337766a67fe24af",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-52-244-145.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.244.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cml_eip-3"
            },
            "tags_all": {
              "Name": "cml_eip-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:internet-gateway/igw-057d7b93a8f4b9568",
            "id": "igw-057d7b93a8f4b9568",
            "owner_id": "383452002839",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:route-table/rtb-08fef75ef987a987f",
            "id": "rtb-08fef75ef987a987f",
            "owner_id": "383452002839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057d7b93a8f4b9568",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "OwnerName": "",
              "ResourceOwner": "",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "OwnerName": "",
              "ResourceOwner": "",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0298d6f99e9135e0c",
            "route_table_id": "rtb-08fef75ef987a987f",
            "subnet_id": "subnet-0485fbbbb32461ece"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.rtbl",
            "module.vpc.aws_subnet.pub-sub2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:security-group/sg-041dee03c1c84161b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041dee03c1c84161b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "128.107.241.160/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "128.107.241.160/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "173.36.224.108/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "173.36.224.108/32"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "173.36.240.160/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "173.36.240.160/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "173.38.220.32/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "173.38.220.32/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "64.104.125.224/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "64.104.125.224/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "64.104.44.96/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "64.104.44.96/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "72.163.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "72.163.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "72.163.217.96/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "72.163.217.96/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "72.163.220.0/27"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "72.163.220.0/27"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cml-security-group",
            "name_prefix": "",
            "owner_id": "383452002839",
            "revoke_rules_on_delete": false,
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "OwnerName": "",
              "ResourceOwner": "",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "OwnerName": "",
              "ResourceOwner": "",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:subnet/subnet-0a1c033daf0eadf84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c033daf0eadf84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:subnet/subnet-011ef5e51e0df5938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011ef5e51e0df5938",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:subnet/subnet-0929b4ac1740528c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0929b4ac1740528c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:subnet/subnet-0485fbbbb32461ece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0485fbbbb32461ece",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383452002839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "vpc_id": "vpc-07c72133b9c3b00fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:383452002839:vpc/vpc-07c72133b9c3b00fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dadcc5abee67cb11",
            "default_route_table_id": "rtb-019ad0bf1a9513247",
            "default_security_group_id": "sg-092aebb5ae3680cdc",
            "dhcp_options_id": "dopt-0cdf1b7cb4f287a66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c72133b9c3b00fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019ad0bf1a9513247",
            "owner_id": "383452002839",
            "tags": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            },
            "tags_all": {
              "DataTaxonomy": "Cisco Operatoins Data",
              "Environment": "testing",
              "Security_Compliance": "yes",
              "ServiceName": "Security-stack",
              "project_name": "cml_on_aws"
            }
          }
        }
      ]
    }
  ]
}